--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
 
     <title>Calculator</title>
   </head>
@@ -27,5 +27,5 @@
       <div id="displayOutput" style="color: rgb(255, 187, 0)"></div>
     </div>
   </body>
-  <script src="/app.js"></script>
+  <script src="app.js"></script>
 </html>
