--- a/index.html
+++ b/index.html
@@ -27,5 +27,6 @@
       <div id="displayOutput" style="color: rgb(255, 187, 0)"></div>
     </div>
   </body>
+  <footer>Copyright Martin's Solutions</footer>
   <script src="app.js"></script>
 </html>
